CNDB-10090: Fix few types issues
Note that most of this commit is already in apache/cassandra-5.0, but it was added after we started the rebase. It is adjusted for CC

 (Rebase of commit 917e0b44edfbfdca9f35c39e86b608058b382bbd)

CNDB-10090: Provide tests for types compatibility

 (Rebase of commit 975933078f154c99a51d23387d798d1a85d56f44)

CNDB-10090: Use unwrap() more extensively

 (Rebase of commit f4a2e35d40cc970ec894ab570ef2461296daa7d0)

CNDB-10090: Extract isMultiCell field to AbstractType class

 (Rebase of commit 9c8c84dc97293c44acf081c0d8251006510af7a7)

CNDB-10090: Extract subTypes to AbstractType and use it consistently

 (Rebase of commit 83634710e06dc57dc57471e1fedc003c34db749e)

CNDB-10090: Add with and refactor getInstance

 (Rebase of commit 666549d1b0766123e78ce5b1edc9cdb47146131a)

CNDB-10090: Extract withUpdatedUserType, referencesUserType, referencesDuration and expandUserTypes

 (Rebase of commit b5432e000436f564603b9747a92d3756450831d3)

CNDB-10090: Extract MultiCellCapableType with nameComparator method

 (Rebase of commit 82888c4dc02f5d6de796e3be252684476cf47445)

CNDB-10090: Extract common implementation of freeze, remove unfreeze and freezeNestedMultiCellTypes as they were unused

 (Rebase of commit fd01803e8bc36f7767d776bcde64f623f0bb665d)

CNDB-10090: Extract common equals and hashCode where possible

 (Rebase of commit 3a7405bbc48206b98a61094f3b90d955d1dc9eb7)

CNDB-10090: Refactor isXXXCompatibleWith methods

Types compatibility chart: https://docs.google.com/spreadsheets/d/1JY-RpZhoAS3C4aHY3pl2uP_C2Vq1k1cC32OSWiekuww/edit?usp=sharing

 (Rebase of commit 8ef4eb71dcf18e5a409a5022812a045bdbe48d3a)

CNDB-10090: Remove isFreezable method

 (Rebase of commit 21591dcff2fad653e8983c5c7dab1d9cd708dd8d)

CNDB-10090: Remove reverse comparator from AbstractType

 (Rebase of commit e87bd439d134a704151952a48d4ec569de9c4cf6)

CNDB-10090: Remove AbstractType.isFrozenCollection() method

 (Rebase of commit 71de586fe0332594ece130fbccd0b03d3500eefd)

CN