@@ -41,6 +41,7 @@ import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
@@ -80,6 +81,8 @@ import org.apache.cassandra.db.marshal.LineStringType;
 import org.apache.cassandra.db.marshal.ListType;
 import org.apache.cassandra.db.marshal.LongType;
 import org.apache.cassandra.db.marshal.MapType;
+import org.apache.cassandra.db.marshal.MultiCellCapableType;
+import org.apache.cassandra.db.marshal.NumberType;
 import org.apache.cassandra.db.marshal.PartitionerDefinedOrder;
 import org.apache.cassandra.db.marshal.PointType;
 import org.apache.cassandra.db.marshal.PolygonType;
@@ -92,7 +95,6 @@ import org.apache.cassandra.db.marshal.TimeType;
 import org.apache.cassandra.db.marshal.TimeUUIDType;
 import org.apache.cassandra.db.marshal.TimestampType;
 import org.apache.cassandra.db.marshal.TupleType;
-import org.apache.cassandra.db.marshal.TypeParser;
 import org.apache.cassandra.db.marshal.UTF8Type;
 import org.apache.cassandra.db.marshal.UUIDType;
 import org.apache.cassandra.db.marshal.UserType;
@@ -104,6 +106,7 @@ import org.quicktheories.generators.SourceDSL;
 import org.quicktheories.impl.JavaRandom;
 
 import static org.apache.cassandra.utils.AbstractTypeGenerators.TypeKind.COUNTER;
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static org.apache.cassandra.utils.Generators.IDENTIFIER_GEN;
 import static org.apache.cassandra.utils.Generators.filter;
 
@@ -147,7 +150,7 @@ public final class AbstractTypeGenerators
     }
 
 
-    private static final Map<AbstractType<?>, TypeSupport<?>> PRIMITIVE_TYPE_DATA_GENS =
+    public static final Map<AbstractType<?>, TypeSupport<?>> PRIMITIVE_TYPE_DATA_GENS =
     Stream.of(TypeSupport.of(BooleanType.instance, BOOLEAN_GEN),
               TypeSupport.of(ByteType.instance, SourceDSL.integers().between(0, Byte.MAX_VALUE * 2 + 1).map(Integer::byteValue)),
               TypeSupport.of(ShortType.instance, SourceDSL.integers().between(0, Short.MAX_VALUE * 2 + 1).map(Integer::shortValue)),
@@ -171,7 +174,11 @@ public final class AbstractTypeGenerators
                                                                                               .thenComparingInt(Duration::getDays)
                                                                                               .thenComparingLong(Duration::getNanoseconds)),
               TypeSupport.of(IntegerType.instance, Generators.bigInt()),
-              TypeSupport.of(DecimalType.instance, Generators.bigDecimal())
+              TypeSupport.of(DecimalType.instance, Generators.bigDecimal()),
+              TypeSupport.of(DateRangeType.instance, Generators.DATE_RANGE_GEN, Comparator.comparing(DateRangeType.instance::decompose)),
+              TypeSupport.of(LineStringType.instance, Generators.LINE_STRING_GEN, Comparator.comparing(LineStringType.instance::decompose)),
+              TypeSupport.of(PolygonType.instance, Generators.POLYGON_GEN, Comparator.comparing(PolygonType.instance::decompose)),
+              TypeSupport.of(PointType.instance, Generators.POINT_GEN, Comparator.comparing(PointType.instance::decompose))
     ).collect(Collectors.toMap(t -> t.type, t -> t));
     // NOTE not supporting reversed as CQL doesn't allow nested reversed types
     // when generating part of the clustering key, it would be good to allow reversed types as the top level
@@ -286,6 +293,7 @@ public final class AbstractTypeGenerators
         private Function<Integer, Gen<AbstractType<?>>> defaultSetKeyFunc;
         private Predicate<AbstractType<?>> typeFilter = null;
         private Gen<String> udtName = null;
+        private Gen<Boolean> multiCellGen = BOOLEAN_GEN;
 
         public TypeGenBuilder()
         {
@@ -468,7 +476,7 @@ public final class AbstractTypeGenerators
             }
             else
                 kindGen = SourceDSL.arbitrary().enumValues(TypeKind.class);
-            return buildRecursive(maxDepth, maxDepth, kindGen, BOOLEAN_GEN);
+            return buildRecursive(maxDepth, maxDepth, kindGen, multiCellGen);
         }
 
         private Gen<AbstractType<?>> buildRecursive(int maxDepth, int level, Gen<TypeKind> typeKindGen, Gen<Boolean> multiCellGen)
@@ -507,7 +515,7 @@ public final class AbstractTypeGenerators
                     case VECTOR:
                     {
                         Gen<Integer> sizeGen = vectorSizeGen != null ? vectorSizeGen : defaultSizeGen;
-                        return vectorTypeGen(next.get().map(AbstractType::freeze), sizeGen).generate(rnd);
+                        return vectorTypeGen(filter(primitiveGen, NumberType.class::isInstance), sizeGen).generate(rnd);
                     }
                     case COMPOSITE:
                         return compositeTypeGen(compositeElementGen != null ? compositeElementGen : next.get(), compositeSizeGen != null ? compositeSizeGen : defaultSizeGen).generate(rnd);
@@ -626,7 +634,7 @@ public final class AbstractTypeGenerators
                 byte alias = aliasGen.generate(rnd);
                 while (aliases.containsKey(alias))
                     alias = aliasGen.generate(rnd);
-                aliases.put(alias, typeGen.generate(rnd).unfreeze());
+                aliases.put(alias, unfreeze(typeGen.generate(rnd)));
             }
             return DynamicCompositeType.getInstance(aliases);
         };
@@ -712,10 +720,10 @@ public final class AbstractTypeGenerators
     {
         return rnd -> {
             int numElements = sizeGen.generate(rnd);
-            List<AbstractType<?>> elements = new ArrayList<>(numElements);
+            ImmutableList.Builder<AbstractType<?>>elements = ImmutableList.builderWithExpectedSize(numElements);
             for (int i = 0; i < numElements; i++)
                 elements.add(elementGen.generate(rnd));
-            return new TupleType(elements);
+            return new TupleType(elements.build());
         };
     }
 
@@ -750,7 +758,7 @@ public final class AbstractTypeGenerators
         return rnd -> {
             boolean multiCell = multiCellGen.generate(rnd);
             int numElements = sizeGen.generate(rnd);
-            List<AbstractType<?>> fieldTypes = new ArrayList<>(numElements);
+            ImmutableList.Builder<AbstractType<?>> fieldTypes = ImmutableList.builderWithExpectedSize(numElements);
             LinkedHashSet<FieldIdentifier> fieldNames = new LinkedHashSet<>(numElements);
             String ks = ksGen.generate(rnd);
             String name = nameGen.generate(rnd);
@@ -764,13 +772,13 @@ public final class AbstractTypeGenerators
                 fieldNames.add(fieldName);
 
                 AbstractType<?> element = elementGen.generate(rnd);
-                element = multiCell ? element.freeze() : element.unfreeze();
+                element = multiCell ? element.freeze() : unfreeze(element);
                 // a UDT cannot contain a non-frozen UDT; as defined by CreateType
                 if (element.isUDT())
                     element = element.freeze();
                 fieldTypes.add(element);
             }
-            return new UserType(ks, nameBB, new ArrayList<>(fieldNames), fieldTypes, multiCell);
+            return new UserType(ks, nameBB, ImmutableList.copyOf(fieldNames), fieldTypes.build(), multiCell);
         };
     }
 
@@ -813,7 +821,7 @@ public final class AbstractTypeGenerators
         TypeSupport<T> support;
         if (gen != null)
         {
-            support = gen;
+            support = gen.withValueDomain(valueDomainGen);
         }
         // might be... complex...
         else if (type instanceof SetType)
@@ -868,9 +876,9 @@ public final class AbstractTypeGenerators
             // T = Map<A, B> so can not use T here
             MapType<Object, Object> mapType = (MapType<Object, Object>) type;
             // do not use valueDomainGen as map doesn't allow null/empty
-            TypeSupport<Object> keySupport = getTypeSupport(mapType.getKeysType(), sizeGen, null);
+            TypeSupport<Object> keySupport = getTypeSupport(mapType.getKeysType(), sizeGen, valueDomainGen);
             Comparator<Object> keyType = keySupport.valueComparator;
-            TypeSupport<Object> valueSupport = getTypeSupport(mapType.getValuesType(), sizeGen, null);
+            TypeSupport<Object> valueSupport = getTypeSupport(mapType.getValuesType(), sizeGen, valueDomainGen);
             Comparator<Object> valueType = valueSupport.valueComparator;
             Comparator<Map<Object, Object>> comparator = (Map<Object, Object> a, Map<Object, Object> b) -> {
                 List<Object> ak = new ArrayList<>(a.keySet());
@@ -914,7 +922,7 @@ public final class AbstractTypeGenerators
         {
             // T is ByteBuffer
             TupleType tupleType = (TupleType) type;
-            List<Comparator<Object>> columns = (List<Comparator<Object>>) (List<?>) tupleType.allTypes().stream().map(AbstractTypeGenerators::comparator).collect(Collectors.toList());
+            List<Comparator<Object>> columns = (List<Comparator<Object>>) (List<?>) tupleType.subTypes.stream().map(AbstractTypeGenerators::comparator).collect(Collectors.toList());
             Comparator<List<Object>> listCompar = listComparator((i, a, b) -> columns.get(i).compare(a, b));
             Comparator<ByteBuffer> comparator = (ByteBuffer a, ByteBuffer b) -> {
                 ByteBuffer[] abb = tupleType.split(ByteBufferAccessor.instance, a);
@@ -945,7 +953,7 @@ public final class AbstractTypeGenerators
         else if (type instanceof CompositeType)
         {
             CompositeType ct = (CompositeType) type;
-            List<TypeSupport<Object>> elementSupport = (List<TypeSupport<Object>>) (List<?>) ct.types.stream().map(AbstractTypeGenerators::getTypeSupport).collect(Collectors.toList());
+            List<TypeSupport<Object>> elementSupport = (List<TypeSupport<Object>>) (List<?>) ct.subTypes.stream().map(AbstractTypeGenerators::getTypeSupport).collect(Collectors.toList());
             Serde<ByteBuffer, List<Object>> serde = new Serde<ByteBuffer, List<Object>>()
             {
                 @Override
@@ -965,8 +973,8 @@ public final class AbstractTypeGenerators
                 }
             };
             support = (TypeSupport<T>) TypeSupport.of(ct, serde, rnd -> {
-                List<Object> values = new ArrayList<>(ct.types.size());
-                for (int i = 0, size = ct.types.size(); i < size; i++)
+                List<Object> values = new ArrayList<>(ct.subTypes.size());
+                for (int i = 0, size = ct.subTypes.size(); i < size; i++)
                     values.add(elementSupport.get(i).valueGen.generate(rnd));
                 return values;
             }, listComparator((index, a, b) -> elementSupport.get(index).valueComparator.compare(a, b)));
@@ -1110,8 +1118,7 @@ public final class AbstractTypeGenerators
 
     public static void extractUDTs(AbstractType<?> type, Set<UserType> matches)
     {
-        if (type instanceof ReversedType)
-            type = ((ReversedType) type).baseType;
+        type = type.unwrap();
         if (type instanceof UserType)
             matches.add((UserType) type);
         for (AbstractType<?> t : type.subTypes())
@@ -1261,7 +1268,7 @@ public final class AbstractTypeGenerators
         @SuppressWarnings("unchecked")
         private TupleGen(TupleType tupleType, Gen<Integer> sizeGen, @Nullable Gen<ValueDomain> valueDomainGen)
         {
-            this.elementsSupport = tupleType.allTypes().stream().map(t -> getTypeSupport((AbstractType<Object>) t, sizeGen, valueDomainGen)).collect(Collectors.toList());
+            this.elementsSupport = tupleType.subTypes.stream().map(t -> getTypeSupport((AbstractType<Object>) t, sizeGen, valueDomainGen)).collect(Collectors.toList());
         }
 
         public ByteBuffer generate(RandomnessSource rnd)
@@ -1393,9 +1400,7 @@ public final class AbstractTypeGenerators
 
     public static AbstractType unwrap(AbstractType type)
     {
-        if (type instanceof ReversedType)
-            return ((ReversedType) type).baseType;
-        return type;
+        return type.unwrap();
     }
 
     public static AbstractType unfreeze(AbstractType t)
@@ -1403,7 +1408,10 @@ public final class AbstractTypeGenerators
         if (t.isMultiCell())
             return t;
 
-        AbstractType<?> unfrozen = TypeParser.parse(t.toString(true));
+        if (!(t instanceof MultiCellCapableType<?>))
+            return t;
+
+        AbstractType<?> unfrozen = t.with(t.subTypes(), true);
         if (unfrozen.isMultiCell())
             return unfrozen;
 
@@ -1434,10 +1442,8 @@ public final class AbstractTypeGenerators
 
     private static UserType withAddedField(UserType type, String fieldName, AbstractType<?> fieldType)
     {
-        ArrayList<FieldIdentifier> fieldNames = new ArrayList<>(type.fieldNames());
-        fieldNames.add(FieldIdentifier.forUnquoted(fieldName));
-        List<AbstractType<?>> fieldTypes = new ArrayList<>(type.fieldTypes());
-        fieldTypes.add(fieldType);
+        ImmutableList<FieldIdentifier> fieldNames = Collections3.withAppended(type.fieldNames(), FieldIdentifier.forUnquoted(fieldName));
+        ImmutableList<AbstractType<?>> fieldTypes = Collections3.withAppended(type.fieldTypes(), fieldType);
         return new UserType(type.keyspace, type.name, fieldNames, fieldTypes, true);
     }
 
@@ -1445,9 +1451,9 @@ public final class AbstractTypeGenerators
     {
         UserType extType = withAddedField(type, "extra", EmptyType.instance);
         return frozenAndUnfrozen(type,
-                                 new TupleType(type.subTypes(), false),
+                                 new TupleType(type.subTypes()),
                                  extType,
-                                 new TupleType(extType.subTypes(), false));
+                                 new TupleType(extType.subTypes()));
     }
 
     private static void forEachUserTypeVariantPair(UserType leftType, UserType rightType, BiConsumer<? super TupleType, ? super TupleType> typePairConsumer)
@@ -1536,12 +1542,12 @@ public final class AbstractTypeGenerators
 
         String ks = "ks";
         ByteBuffer t = ByteBufferUtil.bytes("t");
-        List<FieldIdentifier> names = Stream.of("a", "b").map(FieldIdentifier::forUnquoted).collect(Collectors.toUnmodifiableList());
+        ImmutableList<FieldIdentifier> names = Stream.of("a", "b").map(FieldIdentifier::forUnquoted).collect(toImmutableList());
 
         primitiveTypePairs().forEach(elem1Pair -> {
             primitiveTypePairs().forEach(elem2Pair -> {
-                UserType leftType = new UserType(ks, t, names, List.of(elem1Pair.left, elem2Pair.left), true);
-                UserType rightType = new UserType(ks, t, names, List.of(elem1Pair.right, elem2Pair.right), true);
+                UserType leftType = new UserType(ks, t, names, ImmutableList.of(elem1Pair.left, elem2Pair.left), true);
+                UserType rightType = new UserType(ks, t, names, ImmutableList.of(elem1Pair.right, elem2Pair.right), true);
                 if (withVariants)
                     forEachUserTypeVariantPair(leftType, rightType, typePairConsumer);
                 else
